hphp/test/quick/recursive-magic-call.php.expectf

Fatal error: Stack overflow in %s/test/quick/recursive-magic-call.php on line 6
